# limbo

./: .clang-format  .editorconfig  .gdbinit  .gitignore  CONTRIBUTING.md  LICENSE  README.md  commpage.h  config.h.in  linker.c  linker.h  main.c  meson.build  meson_options.txt  shared_cache.c  shared_cache.h
.github/workflows/: build.yaml
bsd/: csr.c  handler.c  handler.h  mac.c  meson.build  sysctl.c  xnu-errno.h
bsd/fs/: attrlist.c  fcntl.c  getdirentries.c  stat.c
etc/: cache-lookup.c  meson.build
etc/binfmt.d/: Mach-O.conf
include/mach/: clock_priv.h  dyld_kernel.h  mach_traps.h  message.h  mig_errors.h  ndr.h  port.h  std_types.h  task_info.h  vm_page_size.h
include/mach-o/: fat.h  loader.h
include/mach/i386/: thread_status.h  vm_types.h
man/: cache-lookup.1.scd  limbo.1.scd
mdep/: handler.c  handler.h  meson.build
osfmk/: handler.c  handler.h  mach_host.c  mach_hostServer.c  meson.build  port.h  task.c  taskServer.c
osfmk/bootstrap/: bootstrap.c  bootstrap.h  bootstrapServer.c  bootstrap_defs.h  meson.build
